<resources>
    <string name="app_name">Pokemons app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="arrow_back_desc">arrow_back</string>
    <string name="about_title">About</string>
    <string name="academy_title">SofaScore Android Academy</string>
    <string name="class_2021">Class 2021</string>
    <string name="sofascore_logo_desc">SofaScore logo</string>
    <string name="android_logo_desc">android logo</string>
    <string name="pokemon_app">App name</string>
    <string name="pokemon_app_title">Pokemon App</string>
    <string name="api_credit">API Credit</string>
    <string name="pokemons">pokemons</string>
    <string name="dev_info">Developer</string>
    <string name="tvrtko_ivasic">Tvrtko Ivasic</string>
    <string name="settings_title">Settings</string>
    <string name="short_about_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="more_info">More info</string>
    <string name="clear_my_fav_list_title">clear my favourites list</string>
    <string name="language">Language</string>
    <string name="title_search">Search</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="pokemon_image_desc">pokemon image</string>
    <string name="recycler_pokemon_title">Pokemon name</string>
    <string name="star_desc">is it favourite</string>
    <string name="alert_title">Cleart favourites list?</string>
    <string name="alert_info">This is popover placeholder text, lorem ipsum dolor sit amet</string>
    <string name="bttn_clear">Clear</string>
    <string name="bttn_cancle">Cancle</string>
    <string name="fav_clear_text">Favourites list is clear</string>
    <string name="favourites_title">Favourites</string>
    <string name="edit_desc">edit button</string>
    <string name="reorder_desc">reorder icon</string>
    <string name="search_hint">Search pokemons</string>
    <string name="search_icon_desc">search icon</string>
    <string name="language_en">English</string>
    <string name="language_hr">Croatian</string>
    <string name="title_activity_pokemon_item">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="weight">WEIGHT</string>
    <string name="abilities">Abilities</string>
    <string name="overgrow">Overgrow</string>
    <string name="stats">Stats</string>
    <string name="hp">HP:</string>
    <string name="_45">45</string>
    <string name="total">Total:</string>
    <string name="speed">Speed</string>
    <string name="pokeathlon_stats">Pokéathlon stats</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="pokedex_num">POKEDEX NUM</string>
    <string name="num_prev">001</string>
    <string name="type">TYPE</string>
    <string name="grass">Grass</string>
    <string name="att">Attack:</string>
    <string name="def">Defense:</string>
    <string name="spa">Sp. Atk:</string>
    <string name="spd">Sp. Def:</string>
    <string name="speedTitle">Speed:</string>
    <string name="totalTitle">Total:</string>
    <string name="height">HEIGHT</string>
    <string name="hidden_ability">Hidden Ability</string>
    <string name="evolution">Evolution</string>
    <string name="lv_16">Lv 16</string>
    <string name="next_level_desc">next level</string>
    <string name="first_ev">1ST EVOLUTION</string>
    <string name="second_ev">2ND EVOLUTION</string>
    <string name="unevolved">UNEVOLVED</string>
    <string name="remove_msg">" removed from favourites!"</string>
    <string name="no_fav_msg">No favourite pokemons</string>
    <string name="error_msg">Error message</string>
    <string name="retry_button">Retry</string>
    <string name="loading_msg">Pokemons are loading</string>
    <string name="lv">"Lv "</string>
    <string name="edit_error_msg">You can\'t edit empty list!</string>
    <string name="title_activity_type">activity_type</string>
    <string name="dmg_text_title">2x</string>
    <string name="pokemons_title">POKEMONS</string>
    <string name="moves">MOVES</string>
    <string name="dmg_overview">DAMAGE OVERVIEW</string>
    <string name="offensive">Offensive</string>
    <string name="power">POWER</string>
    <string name="types_title">TYPES</string>
    <string name="defensive">Defensive</string>
    <string name="half_text">1/2x</string>
    <string name="no_dmg_text">0x</string>
    <string name="i">I</string>
    <string name="bloom_doom">Bloom Doom</string>
    <string name="physical">Physical</string>
    <string name="power_value">40</string>
    <string name="_25_max_40">25 (max 40)</string>
    <string name="_25_n_max_40">25\n (max 40)</string>
    <string name="move">MOVE</string>
    <string name="sort_icon">sort_icon</string>
    <string name="gen">GEN</string>
    <string name="category">CATEGORY</string>
    <string name="pp">PP</string>
    <string name="none">None</string>
    <string name="loading">Loading…</string>
</resources>