<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/surface_1">

    <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pokemon_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/Headline1DarkLeft"
        android:text="@string/bulbasaur"/>
        -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pokenum_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/DescriptionColdGrayLeft"
        android:text="@string/pokedex_num" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pokenum_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokenum_title"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/Headline3DarkLeft"
        android:text="@string/num_prev" />

    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:id="@+id/poke_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/pokemon_image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokenum_value"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/DescriptionColdGrayLeft"
        android:text="@string/type" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grass"
        android:textAppearance="@style/Headline3Surface1Left"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:background="@drawable/label_type"
        app:layout_constraintTop_toBottomOf="@+id/type_title"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grass"
        android:textAppearance="@style/Headline3Surface1Left"
        app:layout_constraintStart_toEndOf="@+id/label1"
        android:layout_marginStart="4dp"
        android:background="@drawable/label_type"
        app:layout_constraintTop_toBottomOf="@+id/type_title"
        android:layout_marginTop="4dp" />


</androidx.constraintlayout.widget.ConstraintLayout>