<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/recentagle_surface2">

    <TextView
        android:id="@+id/about_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/about_title"
        android:textAppearance="@style/Headline2DarkLeft" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_info_title"
        android:text="@string/short_about_text"
        android:textAppearance="@style/BodyDarkLeft"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp" />

    <android.widget.Button
        android:id="@+id/bttn_more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/about_text"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/more_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/tint_secondary"
        android:background="@android:color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>