<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/surface_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/evolution_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/pokemon_image_desc" />

            <TextView
                android:id="@+id/evolution_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/DescriptionColdGrayCenter"
                android:text="@string/evolution"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/evolution_image"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/pokemon_ev_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Headline3DarkCenter"
                android:text="@string/evolution"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/evolution_type"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/ev_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/label_evolution"
                android:text="@string/grass"
                android:textColor="@color/surface_1"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_ev_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ev_label2"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/ev_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/label_evolution"
                android:text="@string/grass"
                android:textColor="@color/surface_1"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_ev_name"
                app:layout_constraintStart_toEndOf="@id/ev_label1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/level_ev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/card_ev"
        android:textAppearance="@style/AssistiveDarkCenter"
        android:text="@string/lv_16"
        app:layout_constraintBottom_toTopOf="@+id/next_icon"
        android:layout_marginStart="4dp" />

    <ImageView
        android:id="@+id/next_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toEndOf="@+id/card_ev"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/next_level_desc"
        android:src="@drawable/ic_arrow_drop_down"
        android:rotation="270" />

</androidx.constraintlayout.widget.ConstraintLayout>