<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:background="@color/surface_0">

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemon_card"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reorder_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/surface_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pokemon_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/pokemon_image_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokemon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/recycler_pokemon_title"
                android:textAppearance="@style/Headline2DarkLeft"
                app:layout_constraintStart_toEndOf="@+id/pokemon_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokemon_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/recycler_pokemon_title"
                android:textAppearance="@style/Headline3ColdGrayLeft"
                app:layout_constraintStart_toEndOf="@+id/pokemon_image"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_title"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/pokemon_star"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/star_desc"
                android:src="@drawable/ic_star_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/tint_secondary" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/reorder_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pokemon_card"
        android:src="@drawable/ic_reorder"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/reorder_desc"
        android:visibility="gone"
        android:padding="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>