<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Headline2DarkCenter"
        android:text="@string/offensive"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/power_title"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_overview"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/DescriptionDarkLeft"
        android:text="@string/power"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_overview"
        app:layout_constraintStart_toEndOf="@+id/power_title"
        android:textAppearance="@style/DescriptionDarkLeft"
        android:text="@string/types_title"
        android:layout_marginStart="40dp" />

    <include
        layout="@layout/dmg_relations_container"
        android:id="@+id/double_x2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power_title"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <include
        layout="@layout/dmg_relations_container"
        android:id="@+id/half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/double_x2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp" />

    <include
        layout="@layout/dmg_relations_container"
        android:id="@+id/no_dmg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/half"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>